[tool.poetry]
name = "hello-pid"
version = "0.1.0"
description = ""
authors = ["jnash10 <agamdeep20@iiserb.ac.in>"]
readme = "README.md"
packages = [{include = "hello_pid", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
scipy = "^1.14.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
rich = "^13.7.1"
typer = "^0.12.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
